--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_gallery"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_gallery_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GalleryApp"
-        tools:targetApi="28">
+        tools:targetApi="31">
         <activity
             android:name=".GalleryActivity"
             android:exported="false" />
